examples/typeError/typeErrorInCopatternDest1.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat
.tail (.head f)  = 1
